# libmbGB

./: .cirrus.yml  .gitmodules  .replit  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LEGAL.md  README.md  appveyor.yml  beemake  beemake.py  build.sh  compilelinux.sh  compilewindows.sh  contact.html  donate.html  downloads.html  faq.html  index.html  msys_dist.sh  sendmail.php  styles.css
.circleci/: config.yml
.github/azure-workflows/: build-macos-x64.yml
2021/: libmbgb-website.html
audio-backends/null/: backend.cpp  backend.h  nullbackend.h
audio-backends/openal/: openalbackend.cpp  openalbackend.h
audio-backends/sdl2/: backend.cpp  backend.h  sdl2backend.cpp  sdl2backend.h
audio-backends/xaudio2/: xaudio2backend.cpp
embed/include/libmbGB/: cpu.h  gpu.h
embed/src/core/: cpu.cpp
example/: CMakeLists.txt  main.cpp
example/headless/: CMakeLists.txt  main.cpp
example/headless/libmbGB/src/core/: libmbgb.cpp
example/libretro/: CMakeLists.txt  main.cpp
example/linkcable/: CMakeLists.txt  main.cpp
example/qt/: CMakeLists.txt  displaywidget.cpp  emusettingsdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/qt5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
example/sdl2/: CMakeLists.txt  main.cpp  main.h  termcolor.h
example/sdl2-imgui/: CMakeLists.txt  main.cpp
example/sdl2/libmbGB/include/libmbGB/: cpu.h  input.h  timers.h
example/sdl2/libmbGB/src/core/: input.cpp
example/sdl2embed/: CMakeLists.txt  main.cpp
example/sdl2embed/embed/include/libmbGB/: mmu.h
example/sdl2embed/embed/src/core/: apu.cpp
examples/: CMakeLists.txt
examples/01-minimal/: CMakeLists.txt  main.cpp
include/audio-backends/null/: nullbackend.h
include/audio-backends/sdl2/: sdl2backend.h
include/libmbGB/: apu.h  cpu.h  gpu.h  input.h  libmbgb.h  libmbgb_api.h  mmu.h  utils.h
libmbGB/include/libmbGB/: addons.h  addons.inl  apu.h  cpu.h  enums.h  gpu.h  infrared.h  input.h  irdevices.h  libmbgb.h  libmbgb_api.h  mappers.inl  mmu.h  serial.h  timers.h  utils.h  vecfile.h
libmbGB/src/core/: addons.cpp  apu.cpp  cpu.cpp  gpu.cpp  infrared.cpp  input.cpp  irdevices.cpp  libmbgb.cpp  mbc.cpp  mmu.cpp  ops.cpp  serial.cpp  timers.cpp  utils.cpp
mbGB-Qt/: CMakeLists.txt  QAudioProcessor  coreupdater.h  displaywidget.cpp  displaywidget.h  emusettingsdialog.cpp  emusettingsdialog.h  emusettingsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qaudioprocessor.h  qgbcore.h
mbGB-SDL/: CMakeLists.txt  main.cpp
mbGB-SDL2/: CMakeLists.txt  main.cpp  main.h
mbGB-retro/: CMakeLists.txt  main.cpp
res/: cheatfile.toml  libmbgb.toml
res/bootroms/: gbabios.gba  gbcbios.gbc
res/bootroms/src/: agb_bios.asm  cgb_bios.asm  dmg_bios.asm  libmbgb_logo.1bpp
res/shaders/: default.fs  grayscale.fs  invert_x.vs  pokefan.fs  scale2x.fs  scale3x.fs  sepia.fs  vertex.vs
src/audio-backends/null/: nullbackend.cpp
src/audio-backends/sdl2/: sdl2backend.cpp
src/core/: apu.cpp  cpu.cpp  gpu.cpp  input.cpp  libmbgb.cpp  mbc.cpp  mmu.cpp  ops.cpp  timers.cpp  utils.cpp
tools/: msys_dist.sh
travis/: compilemac.sh
